--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,21 @@ body {
   color: var(--foreground);
   font-family: var(--font-sans), system-ui, sans-serif;
 }
+
+/*Modal fix*/
+.ReactModal__Content:focus-visible {
+  outline: -webkit-focus-ring-color auto 0px;
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 400ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
