--- a/src/components/Reviews/styles.module.scss
+++ b/src/components/Reviews/styles.module.scss
@@ -46,3 +46,16 @@
         width: 600px;
     }
 }
+
+/* Optional scrollbar hide utility */
+.scrollbarHide {
+    -ms-overflow-style: none;
+    /* IE/Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.scrollbarHide::-webkit-scrollbar {
+    display: none;
+    /* Chrome/Safari */
+}
